changes - update project to Java 11; - update spring boot version to 2.3.0; - replace orika to mapstruct; - code refactor.